Revamped the navbar to match a white/gray theme. Chaged the landing page to be a blank page with a background image

--- a/client/src/components/Header/NavBar.css
+++ b/client/src/components/Header/NavBar.css
@@ -1,9 +1,9 @@
-.header {
-    background: #282c34;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    padding: 1%;
+* {
+    font-family: Verdana, Geneva, sans-serif
+}
+
+#department-title {
+    font-size: 4em;
 }
 
 .nav-logo {
@@ -13,26 +13,7 @@
     padding: 10%;
 }
 
-.nav-logo:hover {
-
+.nav-item {
+    font-size: 1.5em;
+    margin: auto 10px;
 }
-
-.nav-items {
-    display:flex;
-    margin-left: auto;
-    margin-right: 5%;
-    align-items: center;
-}
-
-.nav-link {
-    background-color: #09d3ac;
-    color: black;
-    padding: 14px 25px;
-    text-align: center;
-    text-decoration: none;
-}
-
-.nav-link:hover {
-    background-color: #08bd9a;
-}
-
