--- a/client/src/components/Header/NavBar.css
+++ b/client/src/components/Header/NavBar.css
@@ -14,7 +14,7 @@
     margin: auto 10px;
 }
 
-.navbar {
+#main-navbar {
     -webkit-box-shadow: 0px 4px 5px -5px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 4px 5px -5px rgba(0,0,0,0.75);
     box-shadow: 0px 4px 5px -5px rgba(0,0,0,0.75);
