--- a/client/src/views/Home/NavBarHome.css
+++ b/client/src/views/Home/NavBarHome.css
@@ -17,3 +17,9 @@
     font-size: 1em;
     margin: auto 10px;
 }
+
+#home-navbar {
+    -webkit-box-shadow: 0px 4px 5px -5px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 4px 5px -5px rgba(0,0,0,0.75);
+    box-shadow: 0px 4px 5px -5px rgba(0,0,0,0.75);
+}
