--- a/client/src/views/Navigation/Navigation.css
+++ b/client/src/views/Navigation/Navigation.css
@@ -1,7 +1,7 @@
 #navigation-page-container {
     padding: 30px 0;
-    border-left: 1px solid #ababab;
-    border-right: 1px solid #ababab;
+    border-left: .5px solid #ababab;
+    border-right: .5px solid #ababab;
     background-color: white;
     flex-grow: 1;
     display: flex;
