Added mobile view to navigation. Added non-functional button for google maps

--- a/client/src/views/Navigation/Navigation.css
+++ b/client/src/views/Navigation/Navigation.css
@@ -9,3 +9,11 @@
     width: 90%;
     margin: auto;
 }
+
+@media (max-width: 767px) {
+    #navigation-page-container {
+        width: 100%;
+        flex-direction: column;
+        padding: 20px;
+    }
+}
