--- a/client/src/views/Navigation/Subpages/HospitalDirections.css
+++ b/client/src/views/Navigation/Subpages/HospitalDirections.css
@@ -5,6 +5,13 @@
     padding: 0px 0px 10px 0px;
 }
 
+#hospital-subheader {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0px 0px 10px 0px;
+}
+
 .directions-header {
     font-size: 1.2rem;
 }
@@ -24,7 +31,37 @@
     height: 60vh;
 }
 
+#hospital-address-form {
+    width: 49%;
+    display: flex;
+    flex-direction: row;
+}
+
+.form-control.hospital {
+    margin: auto;
+}
+
 @media (max-width: 1000px) {
+    #hospital-header {
+        flex-direction: column;
+    }
+
+    #hospital-subheader {
+        flex-direction: column-reverse;
+    }
+
+    #hospital-address-form {
+        margin: 20px 0px;
+    }
+
+    #directions-section {
+        margin: 20px;
+    }
+
+    #hospital-address-form {
+        width: 100%;
+    }
+
     #hospital-container {
         flex-direction: column;
     }
