--- a/client/src/views/Navigation/Subpages/HospitalDirections.css
+++ b/client/src/views/Navigation/Subpages/HospitalDirections.css
@@ -44,6 +44,7 @@
 @media (max-width: 1000px) {
     #hospital-header {
         flex-direction: column;
+        text-align: center;
     }
 
     #hospital-subheader {
