--- a/client/src/views/AppointmentPage/AppointmentPage.css
+++ b/client/src/views/AppointmentPage/AppointmentPage.css
@@ -18,7 +18,7 @@
 
 #appointment-page-reminders {
     flex-grow: 1;
-    text-align: center;
+    text-align: left;
     margin: 20px 0px 20px 20px;
     padding: 10px;
 }
@@ -26,6 +26,7 @@
 .appointment-header {
     font-size: 1.7rem;
     font-weight: bold;
+    padding: 10px;
 }
 
 .rbc-calendar {
