--- a/client/src/views/AppointmentPage/AppointmentPage.css
+++ b/client/src/views/AppointmentPage/AppointmentPage.css
@@ -11,7 +11,7 @@
 
 #appointment-page-list{
     flex-grow: 3;
-    text-align: center;
+    text-align: left;
     margin: 20px 20px 20px 0px;
     padding: 10px;
 }
