--- a/client/src/components/SignUp/SignUpBox.css
+++ b/client/src/components/SignUp/SignUpBox.css
@@ -22,6 +22,11 @@
     padding: 20px;
 }
 
+.form-control-dob {
+    padding: 6px 20px;
+}
+
+
 #create-page-btn {
     margin: 0 auto;
     background-color: #0021A5;
