--- a/client/src/views/AppointmentPage/AppointmentPage.css
+++ b/client/src/views/AppointmentPage/AppointmentPage.css
@@ -10,10 +10,11 @@
 }
 
 #appointment-page-list{
-    flex-grow: 3;
+    flex-grow: 2;
     text-align: left;
     margin: 20px 20px 20px 0px;
     padding: 10px;
+    max-width: 66%;
 }
 
 #appointment-page-reminders {
@@ -21,6 +22,7 @@
     text-align: left;
     margin: 20px 0px 20px 20px;
     padding: 10px;
+    max-width: 33%;
 }
 
 .appointment-header {
@@ -48,6 +50,7 @@
         text-align: center;
         margin: 20px 0px;
         padding: 10px;
+        max-width: 100%;
     }
     
     #appointment-page-reminders {
@@ -55,6 +58,7 @@
         text-align: center;
         margin: 20px 0px;
         padding: 10px;
+        max-width: 100%;
     }
 
     .rbc-calendar {
