--- a/client/src/views/AppointmentPage/AppointmentPage.css
+++ b/client/src/views/AppointmentPage/AppointmentPage.css
@@ -36,7 +36,7 @@
     min-height: 600px;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 804px) {
     #appointment-page-container {
         padding: 40px 0px;
     }
@@ -64,5 +64,10 @@
     .rbc-calendar {
         min-width: 0;
         min-height: 600px;
+    }
+
+    .rbc-toolbar {
+        display: flex;
+        flex-direction: column;
     }
 }
