--- a/client/src/components/SignIn/SignInBox.css
+++ b/client/src/components/SignIn/SignInBox.css
@@ -1,8 +1,7 @@
 #container {
     background-color: rgba(207, 207, 207, .5);
     margin: 20px auto;
-    width: 30%; 
-    min-width: 400px;
+    width: 30vw; 
     display: flex; 
     flex-flow: column;
     text-align: center;
@@ -66,11 +65,4 @@
 
 #button-group {
     width: 100%;
-}
-
-@media (max-width: 450px) {
-    #container {
-        width: 100%;
-        min-width: 0px;
-    }
 }
