Added an input box for location

--- a/client/src/views/Navigation/Subpages/HospitalDirections.css
+++ b/client/src/views/Navigation/Subpages/HospitalDirections.css
@@ -47,6 +47,13 @@
     margin: auto;
 }
 
+.origin-form {
+    display: flex;
+    flex-direction: row;
+    width: 49%;
+    justify-content: space-between;
+}
+
 @media (max-width: 1000px) {
     #hospital-header {
         flex-direction: column;
