Styled drop down

--- a/client/src/views/Navigation/Subpages/HospitalDirections.css
+++ b/client/src/views/Navigation/Subpages/HospitalDirections.css
@@ -1,3 +1,8 @@
+#hospital-container {
+    padding: 0px 20px;
+    flex-grow: 1;
+}
+
 #hospital-header {
     display: flex;
     flex-direction: row;
@@ -47,14 +52,26 @@
     margin: auto;
 }
 
-.origin-form {
-    display: flex;
-    flex-direction: row;
+#directions-section {
     width: 49%;
-    justify-content: space-between;
+}
+
+.location-autocomplete {
+    flex-grow: 1;
+    max-width: 49%;
+    position: relative;
+}
+
+.dropdown-autocomplete {
+    width: 100%;
 }
 
 @media (max-width: 1000px) {
+    #hospital-container {
+        padding: 0px;
+        flex-grow: 1;
+    }
+
     #hospital-header {
         flex-direction: column;
         text-align: center;
@@ -69,7 +86,13 @@
     }
 
     #directions-section {
-        margin: 20px;
+        width: 100%;
+        margin: 0px;
+    }
+    
+    .location-autocomplete {
+        max-width: 100%;
+        width: 100%;
     }
 
     #hospital-address-form {
