--- a/client/src/views/Home/Home.css
+++ b/client/src/views/Home/Home.css
@@ -25,3 +25,33 @@ body {
 .App-link {
     color: #09d3ac;
 }
+
+#department-title {
+    margin: 0 10px;
+    padding: 0px 10px;
+    border-left: 1px solid #ed6c21;
+    font-weight: 300;
+}
+
+#home-header {
+    padding: 20px 40px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    background-color: #072b55;
+    color: white;
+    border-bottom: .3px solid #0c4485;
+}
+
+@media (max-width:1100px) {
+    #home-header {
+        flex-direction: column;
+    }
+
+    #department-title {
+        border-left: none;
+        font-size: 2rem;
+        text-align: center;
+        margin-top: 10px;
+    }
+}
