--- a/client/src/components/Carousel/CarouselItems/ExploreDpt.css
+++ b/client/src/components/Carousel/CarouselItems/ExploreDpt.css
@@ -1,4 +1,4 @@
-#patient-care-carddeck {
+#explore-dpt-carddeck {
     display: flex;
     flex-direction: row;
     margin: 0px;
@@ -9,7 +9,7 @@
     overflow: visible;
 }
 
-#patient-care-title {
+#explore-dpt-title {
     font-size: 2rem;
     float: left;
     margin: 30px 0px 30px 0px;
@@ -17,22 +17,23 @@
     margin-left: 15px;
 }
 
-#patient-care-container {
+#explore-dpt-container {
     width: 100%;
     height: 100%;
     padding: 20px 80px;
     display: flex;
     flex-direction: column;
+    border-top: .5px solid #ababab;
 }
 
 @media (max-width: 1200px) {
-    #patient-care-container {
+    #explore-dpt-container {
         padding: 0px
     }
 }
 
 @media (max-width: 900px) {
-    #patient-care-carddeck {
+    #explore-dpt-carddeck {
         flex-direction: column;
         margin-bottom: 20px;
     }
@@ -41,11 +42,17 @@
         margin: 20px auto;
     }
 
-    #patient-care-title {
+    #explore-dpt-title {
         text-align: center;
     }
 
-    #patient-care-container {
+    #explore-dpt-container {
         padding: 0px
+    }
+    
+    .explore-dpt-button-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
     }
 }
