--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -18,8 +18,8 @@
     font-weight: bold;
 }
 
-.navbar-nav .nav-link:hover {
-    color: white;
+.main .navbar-nav .nav-link:hover {
+    color: white !important;
 }
 
 #main-navbar {
